# address-book-rust

./: Cargo.toml  README.md  diesel.toml  docker-compose.yml
migrations/2025-03-22-205111_create_address_book/: up.sql
src/: error.rs  lib.rs  main.rs  model.rs  schema.rs  setup.rs  state.rs  util.rs
src/db/: contacts.rs  mod.rs
src/handlers/: add.rs  edit.rs  list.rs  mod.rs  remove.rs  search.rs
